loader and fixes

--- a/TODO
+++ b/TODO
@@ -4,5 +4,7 @@
 - Мониторинг статуса сервиса через открытое API
 - Заменить прямой доступ ml-core во внешнюю сеть на обратное проксирование через nginx
 - Настроить порты доступа микросервисов на более понятные диапазоны
-- Настроить профили контейнеров + вспомогательный "пакетный менеджер"
+- Настроить профили контейнеров + вспомогательный "пакетный менеджер" (инициализация и обновление .venv в процессе разработки)
 - Добавить ограничители на очереди в redis
+- Переписать этапы обработки файла на классы
+- Реализовать примитивный ORM (упростить доступ к бд через репозитории)
