fix MINIO deprecated keys

--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@
 - Добавить ограничители на очереди в redis
 - Переписать этапы обработки файла на классы
 - Реализовать примитивный ORM (упростить доступ к бд через репозитории)
+- Подправить .env (MINIO)
