Проблемы с развертыванием OCR-модели

--- a/TODO
+++ b/TODO
@@ -1,3 +1,17 @@
+# TOP PRIOTITY
+- Добавить счетчик страниц в Loader
+    Операция парсинга pdf-страницы через deeepseek-ocr локально занимает 2-3 минуты. Если не внедрить оптимизации, то для набора ~100 статей с 5 страницами в среднем уйдет 25 часов
+- Проверить стабильность хранилища Minio|Redis, разместить на диске с VKR
+# Medium Priority
+- Внедрить логирование и долгосрочную статистику в локальные модели
+    В частности в отчете может пригодится информация по среднему времени обработки/размерам статей и т.п.
+    Текущий план - отдельные записи в Redis с полной статистикой
+- Организовать оркестратор
+    1. От корутин меньше расходов, чем при использовании Celery-микросервисов
+    2. Т.к. технически невыполнимо одновременный запуск OCR+LLM единственная возможная реализация полной обработки статьи - однопоточный Pipeline. 
+    3. Для экономии ресурсов и времени на развертывание/свертывание моделей можно выполнять пакетную обработку, следовательно у моделей должен быть общий оркестратор
+    4. Этапы, связанные с обработкой текста моделями, занимают куда больше времени чем все предыдущие этапы пайплайна. Следовательно выгода от параллелизации начальных этапов относительно минимальная
+# LOWEST PRIORITY
 - Инициализировать репозитории гитхаба (с ветками/тегированием версий)
 - Оформить план разработки в виде списка TODO
 - Добавить логирование в текущие процессы
